redesign settings tab

--- a/control/settings/templates/home.html
+++ b/control/settings/templates/home.html
@@ -13,6 +13,14 @@
 </div>
 
 <div class="row margin-bottom-twenty flex flex-align-center">
+    <label class="tooltip-container col-md-4">Enable Favorites</label>
+    <div class="button-switch col-md-9 flex flex-justify-end">
+        <input id="allowFavoritesSwitch" type="checkbox" ng-model="Settings.data.content.allowFavorites">
+        <label for="allowFavoritesSwitch" class="label-success"></label>
+    </div>
+</div>
+
+<div class="row margin-bottom-twenty flex flex-align-center">
     <label class="tooltip-container col-md-4">Enable Personal Notes
         <span class="btn-info-icon btn-primary">
             <span class="cp-tooltip">
@@ -42,17 +50,88 @@
 </div>
 
 <div class="row margin-bottom-twenty flex flex-align-center">
-    <label class="tooltip-container col-md-4">Bypass Info Page
+    <label class="tooltip-container col-md-4">Resume Playback from Last Position
         <span class="btn-info-icon btn-primary">
             <span class="cp-tooltip">
-                Automatically navigate users directly to the player page, prioritizing video, then audio, followed by
-                source URL.
+                Automatically resume media playback from where the user left off upon returning to the app. Applies
+                across all Media Center instances.
             </span>
         </span>
     </label>
     <div class="button-switch col-md-9 flex flex-justify-end">
-        <input id="skipInfoSwitch" type="checkbox" ng-model="Settings.data.design.skipMediaPage">
-        <label for="skipInfoSwitch" class="label-success"></label>
+        <input id="enableStartWithAutoJumpByDefault" type="checkbox"
+            ng-model="Settings.data.content.startWithAutoJumpByDefault">
+        <label for="enableStartWithAutoJumpByDefault" class="label-success" ng-class="{'disabled': !Settings.data.content.forceAutoPlay}"></label>
+    </div>
+</div>
+
+<div class="row margin-bottom-twenty flex flex-align-center">
+    <label class="tooltip-container col-md-4">Enable Offline Access
+        <span class="btn-info-icon btn-primary">
+            <span class="cp-tooltip">
+                Allow users to download media items for offline viewing and listening.
+            </span>
+        </span>
+    </label>
+    <div class="button-switch col-md-9 flex flex-justify-end">
+        <input id="allowOfflineSwitch" type="checkbox" ng-model="Settings.data.content.allowOfflineDownload">
+        <label for="allowOfflineSwitch" class="label-success"></label>
+    </div>
+</div>
+
+<div class="row margin-bottom-twenty flex flex-align-center">
+    <label class="tooltip-container col-md-4">Enable Media Filtering
+        <span class="btn-info-icon btn-primary">
+            <span class="cp-tooltip">
+                Enable filtering of items based on specific categories to help users find content more efficiently.
+            </span>
+        </span>
+    </label>
+    <div class="button-switch col-md-9 flex flex-justify-end">
+        <input id="enableFilterSwitch" type="checkbox" ng-model="Settings.data.content.enableFiltering">
+        <label for="enableFilterSwitch" class="label-success"></label>
+    </div>
+</div>
+
+<div class="row margin-bottom-twenty flex flex-align-center">
+    <label class="tooltip-container col-md-4">Enable List Shuffle
+        <span class="btn-info-icon btn-primary">
+            <span class="cp-tooltip">
+                Enable the shuffle feature in the player. Users can turn shuffle on/off in the app. Shuffle affects only the items currently loaded in the list, with more added as the user scrolls.
+            </span>
+        </span>
+    </label>
+    <div class="button-switch col-md-9 flex flex-justify-end">
+        <input id="shuffleAudioListItemsSwitch" type="checkbox" ng-model="Settings.data.content.shuffleAudioListItems" ng-class="{'disabled': !Settings.data.content.autoPlay}">
+        <label for="shuffleAudioListItemsSwitch" class="label-success" ng-class="{'disabled': !Settings.data.content.autoPlay}"></label>
+    </div>
+</div>
+
+<div class="row margin-bottom-twenty flex flex-align-center">
+    <label class="tooltip-container col-md-4">Display View Count
+        <span class="btn-info-icon btn-primary">
+            <span class="cp-tooltip">
+                Show the total number of times an item has been opened.
+            </span>
+        </span>
+    </label>
+    <div class="button-switch col-md-9 flex flex-justify-end">
+        <input id="enablePlayCountSwitch" type="checkbox" ng-model="Settings.data.content.showViewCount">
+        <label for="enablePlayCountSwitch" class="label-success"></label>
+    </div>
+</div>
+
+<div class="row margin-bottom-twenty flex flex-align-center">
+    <label class="tooltip-container col-md-4">Highlight Played Items
+        <span class="btn-info-icon btn-primary">
+            <span class="cp-tooltip">
+                Display a marker to indicate which items have already been viewed or played by the user.
+            </span>
+        </span>
+    </label>
+    <div class="button-switch col-md-9 flex flex-justify-end">
+        <input id="enableIndicatePlayedItems" type="checkbox" ng-model="Settings.data.content.indicatePlayedItems">
+        <label for="enableIndicatePlayedItems" class="label-success"></label>
     </div>
 </div>
 
@@ -131,99 +210,7 @@
     </div>
 </div>
 
-<div class="row margin-bottom-twenty flex flex-align-center">
-    <label class="tooltip-container col-md-4">Auto-Add All Audio to Playlist
-        <span class="btn-info-icon btn-primary">
-            <span class="cp-tooltip">
-                Automatically add all audio files to the playlist, disabling individual playlist management. Disable
-                settings like Autoplay, Add to Playlist, and Remove from Playlist.
-            </span>
-        </span>
-    </label>
-    <div class="button-switch col-md-9 flex flex-justify-end">
-        <input id="playAllAudioSwitch" type="checkbox" ng-model="Settings.data.content.forceAutoPlay" ng-class="{'disabled': Settings.data.content.autoPlay || Settings.data.content.globalPlaylist}">
-        <label for="playAllAudioSwitch" class="label-success" ng-class="{'disabled': Settings.data.content.autoPlay || Settings.data.content.globalPlaylist}"></label>
-    </div>
-</div>
-<div class="row margin-bottom-twenty flex flex-align-center">
-    <label class="tooltip-container col-md-4"></label>
-    <div class="button-switch col-md-9 flex flex-justify-end">
-        <p class="info-note w-100">Enabling this setting will automatically add all available audio files to the playlist, overriding manual playlist controls.</p>
-    </div>
-</div>
-
-<div class="row margin-bottom-twenty flex flex-align-center">
-    <label class="tooltip-container col-md-4">Resume Playback from Last Position
-        <span class="btn-info-icon btn-primary">
-            <span class="cp-tooltip">
-                Automatically resume media playback from where the user left off upon returning to the app. Applies
-                across all Media Center instances.
-            </span>
-        </span>
-    </label>
-    <div class="button-switch col-md-9 flex flex-justify-end">
-        <input id="enableStartWithAutoJumpByDefault" type="checkbox"
-            ng-model="Settings.data.content.startWithAutoJumpByDefault">
-        <label for="enableStartWithAutoJumpByDefault" class="label-success" ng-class="{'disabled': !Settings.data.content.forceAutoPlay}"></label>
-    </div>
-</div>
-
-<div class="row margin-bottom-twenty flex flex-align-center">
-    <label class="tooltip-container col-md-4">Continuous Playback
-        <span class="btn-info-icon btn-primary">
-            <span class="cp-tooltip">
-                Enable automatic playback of all media items in sequence, allowing users to play the next track without
-                returning to the list.
-            </span>
-        </span>
-    </label>
-    <div class="button-switch col-md-9 flex flex-justify-end">
-        <input id="autoPlaySwitch" type="checkbox" ng-model="Settings.data.content.autoPlay" ng-class="{'disabled': Settings.data.content.forceAutoPlay}">
-        <label for="autoPlaySwitch" class="label-success" ng-class="{'disabled': Settings.data.content.forceAutoPlay}"></label>
-    </div>
-</div>
-<div class="row margin-bottom-twenty flex flex-align-center">
-    <label class="tooltip-container col-md-4"></label>
-    <div class="button-switch col-md-9 flex flex-justify-end">
-        <p class="info-note w-100">Enabling this will disable 'Auto-Add All Audio to Playlist'</p>
-    </div>
-</div>
-
-<div class="row margin-bottom-twenty flex flex-align-center">
-    <label class="tooltip-container col-md-4">Enable List Shuffle
-        <span class="btn-info-icon btn-primary">
-            <span class="cp-tooltip">
-                Enable the shuffle feature in the player. Users can turn shuffle on/off in the app. Shuffle affects only the items currently loaded in the list, with more added as the user scrolls.
-            </span>
-        </span>
-    </label>
-    <div class="button-switch col-md-9 flex flex-justify-end">
-        <input id="shuffleAudioListItemsSwitch" type="checkbox" ng-model="Settings.data.content.shuffleAudioListItems" ng-class="{'disabled': !Settings.data.content.autoPlay}">
-        <label for="shuffleAudioListItemsSwitch" class="label-success" ng-class="{'disabled': !Settings.data.content.autoPlay}"></label>
-    </div>
-</div>
-
-<div class="row margin-bottom-twenty flex flex-align-center">
-    <label class="tooltip-container col-md-4">Autoplay Delay
-        <span class="btn-info-icon btn-primary">
-            <span class="cp-tooltip">
-                Configure a delay before automatically playing the next item.
-            </span>
-        </span>
-    </label>
-
-    <div class="col-md-9 flex flex-justify-end" dropdown is-open="status.isOpen">
-        <button class="btn btn-default text-left dropdown-toggle w-100" dropdown-toggle aria-expanded="true" ng-class="{'disabled': !Settings.data.content.autoPlay}">
-            <span class="pull-left">{{Settings.data.content.autoPlayDelay.label || 'Off'}}</span>
-            <span class="chevron icon-chevron-down pull-right"></span>
-        </button>
-        <ul class="dropdown-menu delay-dropdown-menu extended margin-left-fifteen" role="menu">
-            <li ng-repeat="option in Settings.autoPlayDelayOptions" ng-click="Settings.setAutoPlayDelay(option)">
-                <a class="transition-third">{{option.label}}</a>
-            </li>
-        </ul>
-    </div>
-</div>
+<hr />
 
 <div class="row margin-bottom-twenty flex flex-align-center">
     <label class="tooltip-container col-md-4">Use Global Playlist
@@ -290,59 +277,84 @@
     </div>
 </div>
 
+<hr />
+
 <div class="row margin-bottom-twenty flex flex-align-center">
-    <label class="tooltip-container col-md-4">Enable Offline Access
+    <label class="tooltip-container col-md-4">Auto-Add All Audio to Playlist
         <span class="btn-info-icon btn-primary">
             <span class="cp-tooltip">
-                Allow users to download media items for offline viewing and listening.
+                Automatically add all audio files to the playlist, disabling individual playlist management. Disable
+                settings like Autoplay, Add to Playlist, and Remove from Playlist.
             </span>
         </span>
     </label>
     <div class="button-switch col-md-9 flex flex-justify-end">
-        <input id="allowOfflineSwitch" type="checkbox" ng-model="Settings.data.content.allowOfflineDownload">
-        <label for="allowOfflineSwitch" class="label-success"></label>
+        <input id="playAllAudioSwitch" type="checkbox" ng-model="Settings.data.content.forceAutoPlay" ng-class="{'disabled': Settings.data.content.autoPlay || Settings.data.content.globalPlaylist}">
+        <label for="playAllAudioSwitch" class="label-success" ng-class="{'disabled': Settings.data.content.autoPlay || Settings.data.content.globalPlaylist}"></label>
+    </div>
+</div>
+<div class="row margin-bottom-twenty flex flex-align-center">
+    <label class="tooltip-container col-md-4"></label>
+    <div class="button-switch col-md-9 flex flex-justify-end">
+        <p class="info-note w-100">Enabling this setting will automatically add all available audio files to the playlist, overriding manual playlist controls.</p>
     </div>
 </div>
 
 <div class="row margin-bottom-twenty flex flex-align-center">
-    <label class="tooltip-container col-md-4">Enable Media Filtering
+    <label class="tooltip-container col-md-4">Continuous Playback
         <span class="btn-info-icon btn-primary">
             <span class="cp-tooltip">
-                Enable filtering of items based on specific categories to help users find content more efficiently.
+                Enable automatic playback of all media items in sequence, allowing users to play the next track without
+                returning to the list.
             </span>
         </span>
     </label>
     <div class="button-switch col-md-9 flex flex-justify-end">
-        <input id="enableFilterSwitch" type="checkbox" ng-model="Settings.data.content.enableFiltering">
-        <label for="enableFilterSwitch" class="label-success"></label>
-    </div>
-</div>
-
-
-<div class="row margin-bottom-twenty flex flex-align-center">
-    <label class="tooltip-container col-md-4">Display View Count
-        <span class="btn-info-icon btn-primary">
-            <span class="cp-tooltip">
-                Show the total number of times an item has been opened.
-            </span>
-        </span>
-    </label>
-    <div class="button-switch col-md-9 flex flex-justify-end">
-        <input id="enablePlayCountSwitch" type="checkbox" ng-model="Settings.data.content.showViewCount">
-        <label for="enablePlayCountSwitch" class="label-success"></label>
+        <input id="autoPlaySwitch" type="checkbox" ng-model="Settings.data.content.autoPlay" ng-class="{'disabled': Settings.data.content.forceAutoPlay}">
+        <label for="autoPlaySwitch" class="label-success" ng-class="{'disabled': Settings.data.content.forceAutoPlay}"></label>
     </div>
 </div>
 
 <div class="row margin-bottom-twenty flex flex-align-center">
-    <label class="tooltip-container col-md-4">Highlight Played Items
+    <label class="tooltip-container col-md-4">Bypass Info Page
         <span class="btn-info-icon btn-primary">
             <span class="cp-tooltip">
-                Display a marker to indicate which items have already been viewed or played by the user.
+                Automatically navigate users directly to the player page, prioritizing video, then audio, followed by
+                source URL.
             </span>
         </span>
     </label>
     <div class="button-switch col-md-9 flex flex-justify-end">
-        <input id="enableIndicatePlayedItems" type="checkbox" ng-model="Settings.data.content.indicatePlayedItems">
-        <label for="enableIndicatePlayedItems" class="label-success"></label>
+        <input id="skipInfoSwitch" type="checkbox" ng-model="Settings.data.design.skipMediaPage">
+        <label for="skipInfoSwitch" class="label-success"></label>
+    </div>
+</div>
+
+<div class="row margin-bottom-twenty flex flex-align-center">
+    <label class="tooltip-container col-md-4"></label>
+    <div class="button-switch col-md-9 flex flex-justify-end">
+        <p class="info-note w-100">Enabling this will disable 'Auto-Add All Audio to Playlist'</p>
+    </div>
+</div>
+
+<div class="row margin-bottom-twenty flex flex-align-center">
+    <label class="tooltip-container col-md-4">Autoplay Delay
+        <span class="btn-info-icon btn-primary">
+            <span class="cp-tooltip">
+                Configure a delay before automatically playing the next item.
+            </span>
+        </span>
+    </label>
+
+    <div class="col-md-9 flex flex-justify-end" dropdown is-open="status.isOpen">
+        <button class="btn btn-default text-left dropdown-toggle w-100" dropdown-toggle aria-expanded="true" ng-class="{'disabled': !Settings.data.content.autoPlay}">
+            <span class="pull-left">{{Settings.data.content.autoPlayDelay.label || 'Off'}}</span>
+            <span class="chevron icon-chevron-down pull-right"></span>
+        </button>
+        <ul class="dropdown-menu delay-dropdown-menu extended margin-left-fifteen" role="menu">
+            <li ng-repeat="option in Settings.autoPlayDelayOptions" ng-click="Settings.setAutoPlayDelay(option)">
+                <a class="transition-third">{{option.label}}</a>
+            </li>
+        </ul>
     </div>
 </div>
