--- a/widget/assets/css/media.css
+++ b/widget/assets/css/media.css
@@ -7,7 +7,9 @@ html {
     font-size: 16px !important;
 }
 
-
+.slide.safe-area {
+    padding-top: env(safe-area-inset-top) !important;
+}
 .caption {
     font-size: 0.75rem;
     line-height: 1.25rem;
@@ -180,7 +182,10 @@ h5 {
         transform: scale(1);
         opacity: 1;
     }
-}}
+}
+.bottom.fixed-bottom.primaryBackgroundTheme {
+    padding-bottom: env(safe-area-inset-bottom);
+}
 
 .word-break {
     word-break: break-word;
@@ -203,6 +208,7 @@ h5 {
     height: 100%;
     max-width: 660px;
     margin: 0 auto;
+    padding-bottom: calc(20px + env(safe-area-inset-bottom));
     display: flex;
     flex-direction: column;
     justify-content: space-between;
