--- a/widget/assets/css/media.css
+++ b/widget/assets/css/media.css
@@ -8,7 +8,7 @@ html {
 }
 
 .slide.safe-area {
-    padding-top: env(safe-area-inset-top) !important;
+    padding-top: var(--bf-safe-area-inset-top) !important;
 }
 .caption {
     font-size: 0.75rem;
@@ -184,7 +184,7 @@ h5 {
     }
 }
 .bottom.fixed-bottom.primaryBackgroundTheme {
-    padding-bottom: env(safe-area-inset-bottom);
+    padding-bottom: var(--bf-safe-area-inset-bottom);
 }
 
 .word-break {
@@ -208,7 +208,7 @@ h5 {
     height: 100%;
     max-width: 660px;
     margin: 0 auto;
-    padding-bottom: calc(20px + env(safe-area-inset-bottom));
+    padding-bottom: calc(20px + var(--bf-safe-area-inset-bottom));
     display: flex;
     flex-direction: column;
     justify-content: space-between;
